--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seja bem vindo a página do Rafael Alves</title>
+    <link rel="shortcut icon" href="../images/icone_favorito.ico" type="image/x-icon">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
