--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seja bem vindo a página do Rafael Alves</title>
-    <link rel="shortcut icon" href="../images/icone_favorito.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <title>Rafael de Figueiredo Alves</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
