--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/>
     <link rel="icon" type="image/svg+xml" href="/DevPegasus.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DevPegasus</title>
