--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Este é o portfólio oficial do desenvolvedor Rafael de Figueiredo Alves. Aqui você encontra projetos construídos em Delphi, C#, Blazor, Javascript, Typescript, ReactJS, Python e outras tecnologias. Venha conhecer mais sobre o desenvolvedor e seu trabalho." />
+    <meta name="keywords" content="Portfolio, Delphi, CSharp, C Sharp, C#, Typescript, Blazor, Flutter, ReactJS, React, Desenvolvedor, Rafael de Figueiredo Alves, Portfólio, Javascript, Python, Front-end, Backend, Full-stack, fullstack, Lazarus, Desenvolvimento, Projetos" />
+    <meta name="author" content="Rafael de Figueiredo Alves" />    
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/>
     <link rel="icon" type="image/svg+xml" href="/favico.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
