--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Este é o portfólio oficial do desenvolvedor Rafael de Figueiredo Alves. Aqui você encontra projetos construídos em Delphi, C#, Blazor, Javascript, Typescript, ReactJS, Python e outras tecnologias. Venha conhecer mais sobre o desenvolvedor e seu trabalho." />
